cosmic-epoch/cosmic-sory-ia/sory-ia/sory-rs/tui/src/status/snapshots/sory_tui__status__tests__status_snapshot_shows_auto_review_permissions.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI sory (v0.0.0)                                             │
│                                                                       │
│ Visit https://chatgpt.com/sory/settings/usage for up-to-date         │
│ information on rate limits and credits                                │
│                                                                       │
│  Model:            gpt-5.1-sory-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                             │
│  Permissions:      Workspace (auto-review)                            │
│  Agents.md:        <none>                                             │
│                                                                       │
│  Token usage:      0 total  (0 input + 0 output)                      │
│  Context window:   100% left (0 used / 272K)                          │
│  Limits:           data not available yet                             │
╰───────────────────────────────────────────────────────────────────────╯
